;(env
; (ci_build (flags (:standard (:include dune_flags.sexp) -warn-error +A-d)))
; (_ (flags (:include dune_flags.sexp))))
(env (_ (flags (-g -strict-formats -strict-sequence -short-paths -safe-string -w +a-4-40-42-44-48))))

; Git version

(executable
 (name gen_version)
 (libraries mybuild)
 (modules gen_version))

(rule
 (targets version.ml)
 (deps (universe))
 (action (run ./gen_version.bc %{targets})))

(library
 (name version)
 (wrapped false)
 (flags (:standard -opaque))
 (modules version))

; atd

(rule
  (targets ssb_t.mli ssb_t.ml ssb_j.mli ssb_j.ml)
  (deps ssb.atd)
  (action (progn (run %{bin:atdgen} -j -j-std %{deps}) (run %{bin:atdgen} -t %{deps}))))

; main

(executable
 (name ssb)
 ;(public_name ssb)
 (modules :standard \ gen_version version)
 (libraries extlib sodium lwt.unix atdgen lwt_ppx sha ocplib-endian yojson integers version)
 (preprocess (pps lwt_ppx)))
